<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="edu.ib.projekt_tom_2.activities.SignUpActivity"
    android:background="#000">


        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/login"
            android:layout_marginBottom="5dp"
            android:textColor="#FFF"/>

        <EditText
            android:id="@+id/textLogin"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FFF"
            android:textColor="#FFF"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/password"
            android:layout_marginBottom="5dp"
            android:textColor="#FFF"/>

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FFF"
            android:textColor="#FFF"/>

        <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/email"
        android:layout_marginBottom="5dp"
        android:textColor="#FFF"/>

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="text"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FFF"
            android:textColor="#FFF"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/age"
            android:layout_marginBottom="5dp"
            android:textColor="#FFF"/>

        <EditText
            android:id="@+id/textAge"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="text"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FFF"
            android:textColor="#FFF"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btnConfirmSignUp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:onClick="btnConfirmClicked"
            android:text="@string/confirm"
            tools:ignore="OnClick" />

</LinearLayout>